clusters/home.axe.al/projects/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  serviceName: home-assistant-headless
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      dnsPolicy: Default
      containers:
      - name: debug
        image: alpine:latest
        securityContext:
          privileged: true
        command: ["/bin/sh"]
        args: ["-c", "sleep 6000"]
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:stable
        ports:
        - containerPort: 8123
          name: http
        - containerPort: 5353
          name: mdns
          protocol: UDP
        - containerPort: 21065
          name: hap
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2000m
            memory: 4Gi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
