clusters/home.axe.al/projects/home-assistant/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-lb
  namespace: home-assistant
  annotations:
    lbipam.cilium.io/ips: 192.168.200.240
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
  - port: 21065
    targetPort: 21065
    protocol: TCP
    name: hap
