clusters/home.axe.al/projects/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-headless
  namespace: home-assistant
spec:
  clusterIP: None
  ports:
  - port: 8123
    targetPort: 8123
    name: http
  selector:
    app: home-assistant
